# agentic-patterns

./: .markdownlint-cli2.jsonc  CLAUDE.md  README.md  package.json
.github/workflows/: docs.yml
docs/: L0-foundation.md  L1-feedback-loops.md  L2-behavioral-guardrails.md  L3-optimization.md  L4-culture.md  L4-standards-measurement.md
docs/cross-cutting/: anti-patterns.md  glossary.md  migration-guide.md
docs/diagrams/: 1.1-stack-test-architecture.excalidraw  1.2-full-loop-assertion-layering.excalidraw  1.3-sequential-test-ladder.excalidraw  1.4-container-isolation.excalidraw  2.1-skill-overlay-architecture.excalidraw  2.2-skill-chain-pipeline.excalidraw  3.1-smart-routing-flow.excalidraw  3.4-scout-implementer-pattern.excalidraw  4.2-spec-drift-detection-layers.excalidraw  guardrail-middleware-architecture.excalidraw  pyramid.excalidraw
docs/plans/: 2026-03-26-agentic-patterns.md
docs/references/: further-reading.md  reference-telegram-trading-bot-case-study.md
examples/guardrails/: README.md
examples/project-structure/: README.md
examples/skills/: README.md  SKILL-TEMPLATE.md  example-tdd-skill.md
examples/stack-test/python/: README.md  docker-compose.test.yml  pyproject.toml  pytest.ini
examples/stack-test/python/tests/: conftest.py
examples/stack-test/python/tests/stack/: test_01_app_startup.py  test_02_user_registration.py
examples/stack-test/typescript/: README.md  docker-compose.test.yml  jest.config.js  package.json
examples/stack-test/typescript/tests/config/: stack-utils.ts
(+2 files in other folders)
