[project]
name = "stack-test-example-python"
version = "1.0.0"
description = "Minimal stack test example in Python"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "docker>=7.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",  # For parallel execution (disabled by default for stack tests)
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
timeout = 300
timeout_method = "thread"
addopts = "-v --tb=short -p no:xdist"  # Run sequentially by default

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
